--- a/index.html
+++ b/index.html
@@ -11,9 +11,26 @@
     <!-- 300 & 400 w/ italic too. 900 just regular -->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,300;1,400&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
+
   </head>
   <!-- ================== Body ============================ -->
   <body>
+    <header>
+      <div class="container">
+        <p>The Code Review</p>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        text!!
+      </div>
+    </main>
+    <footer>
+      <div class="container">
 
+      </div>
+    </footer>
   </body>
 </html>
