contact info : html
still needs s/ work on it

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!--  Hi! I'm hoping for an 'Exceeds Expectations' Grade.
           If there's something I need to change or fix to get that, please let me know. Thank you!-->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Code Review | Newsletter Signup</title>
@@ -24,7 +25,112 @@
     </header>
     <main>
       <div class="container">
-        text!!
+        <div class="intro">
+          <h1>Signup for our newsletter</h1>
+          <p>Get the latest news on how your code is doing right in your inbox</p>
+
+        </div>
+
+        <!-- thick line and thin lines -->
+        <div class="thik"></div>
+        <div class="thin"></div>
+
+        <form action="index.html" method="post">
+          <fieldset>
+              <legend>Contact Information</legend>
+
+              <label for="name">Full Name</label>
+              <input type="text" id="name" name="user-name" value="">
+
+              <label for="email">Email Address</label>
+              <input type="email" id="email" name="user-email" value="">
+
+              <label for="phone">Phone Number</label>
+              <input type="tel" id="phone" name="user-phone" value="">
+
+              <label for="address">Street Address</label>
+              <input type="text" id="address" name="user-address" value="">
+
+              <label for="city">City</label>
+              <input type="text" id="city" name="user-city" value="">
+
+              <!-- state -->
+              <label for="state">State</label>
+              <select id="state" name="user-state">
+                <option value="AL">Alabama</option>
+              	<option value="AK">Alaska</option>
+              	<option value="AZ">Arizona</option>
+              	<option value="AR">Arkansas</option>
+              	<option value="CA">California</option>
+              	<option value="CO">Colorado</option>
+              	<option value="CT">Connecticut</option>
+              	<option value="DE">Delaware</option>
+              	<option value="DC">District Of Columbia</option>
+              	<option value="FL">Florida</option>
+              	<option value="GA">Georgia</option>
+              	<option value="HI">Hawaii</option>
+              	<option value="ID">Idaho</option>
+              	<option value="IL">Illinois</option>
+              	<option value="IN">Indiana</option>
+              	<option value="IA">Iowa</option>
+              	<option value="KS">Kansas</option>
+              	<option value="KY">Kentucky</option>
+              	<option value="LA">Louisiana</option>
+              	<option value="ME">Maine</option>
+              	<option value="MD">Maryland</option>
+              	<option value="MA">Massachusetts</option>
+              	<option value="MI">Michigan</option>
+              	<option value="MN">Minnesota</option>
+              	<option value="MS">Mississippi</option>
+              	<option value="MO">Missouri</option>
+              	<option value="MT">Montana</option>
+              	<option value="NE">Nebraska</option>
+              	<option value="NV">Nevada</option>
+              	<option value="NH">New Hampshire</option>
+              	<option value="NJ">New Jersey</option>
+              	<option value="NM">New Mexico</option>
+              	<option value="NY">New York</option>
+              	<option value="NC">North Carolina</option>
+              	<option value="ND">North Dakota</option>
+              	<option value="OH">Ohio</option>
+              	<option value="OK">Oklahoma</option>
+              	<option value="OR">Oregon</option>
+              	<option value="PA">Pennsylvania</option>
+              	<option value="RI">Rhode Island</option>
+              	<option value="SC">South Carolina</option>
+              	<option value="SD">South Dakota</option>
+              	<option value="TN">Tennessee</option>
+              	<option value="TX">Texas</option>
+              	<option value="UT">Utah</option>
+              	<option value="VT">Vermont</option>
+              	<option value="VA">Virginia</option>
+              	<option value="WA">Washington</option>
+              	<option value="WV">West Virginia</option>
+              	<option value="WI">Wisconsin</option>
+              	<option value="WY">Wyoming</option>
+                <optgroup label="Territories">
+                  <option value="AS">American Samoa</option>
+                  <option value="GU">Guam</option>
+                  <option value="MP">Northern Mariana Islands</option>
+                  <option value="PR">Puerto Rico</option>
+                  <option value="UM">United States Minor Outlying Islands</option>
+                  <option value="VI">Virgin Islands</option>
+                </optgroup>
+
+              </select>
+
+              <label for="zip">Zip Code</label>
+              <input class="zip" type="text" id="zip" name="user-zip" value="">
+
+          </fieldset>
+          <fieldset>
+              <legend>Newsletter</legend>
+
+
+          </fieldset>
+          <input type="submit" value="Sign Up">
+        </form>
+
       </div>
     </main>
     <footer>
