--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>The Code Review | Newsletter Signup</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <!-- 300 & 400 w/ italic too. 900 just regular -->
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,900;1,300;1,400&display=swap" rel="stylesheet">
+    <!-- 300, 400 & 700 w/ italic too. -->
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -39,75 +39,77 @@
           <fieldset>
               <legend>Contact Information</legend>
 
-              <label for="name">Full Name</label>
-              <input type="text" id="name" name="user-name" value="">
+              <label for="name" class="basic-label">Full Name</label>
+              <input type="text" id="name" name="user-name" required>
 
-              <label for="email">Email Address</label>
-              <input type="email" id="email" name="user-email" value="">
+              <label for="email" class="basic-label">Email Address</label>
+              <input type="email" id="email" name="user-email" required>
 
-              <label for="phone">Phone Number</label>
+              <label for="phone" class="basic-label">Phone Number</label>
               <input type="tel" id="phone" name="user-phone" value="">
 
-              <label for="address">Street Address</label>
+              <label for="address" class="basic-label">Street Address</label>
               <input type="text" id="address" name="user-address" value="">
 
-              <label for="city">City</label>
+              <label for="city" class="basic-label">City</label>
               <input type="text" id="city" name="user-city" value="">
 
               <!-- state -->
-              <label for="state">State</label>
+              <label for="state" class="basic-label">State</label>
               <select id="state" name="user-state">
-                <option value="AL">Alabama</option>
-              	<option value="AK">Alaska</option>
-              	<option value="AZ">Arizona</option>
-              	<option value="AR">Arkansas</option>
-              	<option value="CA">California</option>
-              	<option value="CO">Colorado</option>
-              	<option value="CT">Connecticut</option>
-              	<option value="DE">Delaware</option>
-              	<option value="DC">District Of Columbia</option>
-              	<option value="FL">Florida</option>
-              	<option value="GA">Georgia</option>
-              	<option value="HI">Hawaii</option>
-              	<option value="ID">Idaho</option>
-              	<option value="IL">Illinois</option>
-              	<option value="IN">Indiana</option>
-              	<option value="IA">Iowa</option>
-              	<option value="KS">Kansas</option>
-              	<option value="KY">Kentucky</option>
-              	<option value="LA">Louisiana</option>
-              	<option value="ME">Maine</option>
-              	<option value="MD">Maryland</option>
-              	<option value="MA">Massachusetts</option>
-              	<option value="MI">Michigan</option>
-              	<option value="MN">Minnesota</option>
-              	<option value="MS">Mississippi</option>
-              	<option value="MO">Missouri</option>
-              	<option value="MT">Montana</option>
-              	<option value="NE">Nebraska</option>
-              	<option value="NV">Nevada</option>
-              	<option value="NH">New Hampshire</option>
-              	<option value="NJ">New Jersey</option>
-              	<option value="NM">New Mexico</option>
-              	<option value="NY">New York</option>
-              	<option value="NC">North Carolina</option>
-              	<option value="ND">North Dakota</option>
-              	<option value="OH">Ohio</option>
-              	<option value="OK">Oklahoma</option>
-              	<option value="OR">Oregon</option>
-              	<option value="PA">Pennsylvania</option>
-              	<option value="RI">Rhode Island</option>
-              	<option value="SC">South Carolina</option>
-              	<option value="SD">South Dakota</option>
-              	<option value="TN">Tennessee</option>
-              	<option value="TX">Texas</option>
-              	<option value="UT">Utah</option>
-              	<option value="VT">Vermont</option>
-              	<option value="VA">Virginia</option>
-              	<option value="WA">Washington</option>
-              	<option value="WV">West Virginia</option>
-              	<option value="WI">Wisconsin</option>
-              	<option value="WY">Wyoming</option>
+                <optgroup label="Choose State">
+                  <option value="AL">Alabama</option>
+                	<option value="AK">Alaska</option>
+                	<option value="AZ">Arizona</option>
+                	<option value="AR">Arkansas</option>
+                	<option value="CA">California</option>
+                	<option value="CO">Colorado</option>
+                	<option value="CT">Connecticut</option>
+                	<option value="DE">Delaware</option>
+                	<option value="DC">District Of Columbia</option>
+                	<option value="FL">Florida</option>
+                	<option value="GA">Georgia</option>
+                	<option value="HI">Hawaii</option>
+                	<option value="ID">Idaho</option>
+                	<option value="IL">Illinois</option>
+                	<option value="IN">Indiana</option>
+                	<option value="IA">Iowa</option>
+                	<option value="KS">Kansas</option>
+                	<option value="KY">Kentucky</option>
+                	<option value="LA">Louisiana</option>
+                	<option value="ME">Maine</option>
+                	<option value="MD">Maryland</option>
+                	<option value="MA">Massachusetts</option>
+                	<option value="MI">Michigan</option>
+                	<option value="MN">Minnesota</option>
+                	<option value="MS">Mississippi</option>
+                	<option value="MO">Missouri</option>
+                	<option value="MT">Montana</option>
+                	<option value="NE">Nebraska</option>
+                	<option value="NV">Nevada</option>
+                	<option value="NH">New Hampshire</option>
+                	<option value="NJ">New Jersey</option>
+                	<option value="NM">New Mexico</option>
+                	<option value="NY">New York</option>
+                	<option value="NC">North Carolina</option>
+                	<option value="ND">North Dakota</option>
+                	<option value="OH">Ohio</option>
+                	<option value="OK">Oklahoma</option>
+                	<option value="OR">Oregon</option>
+                	<option value="PA">Pennsylvania</option>
+                	<option value="RI">Rhode Island</option>
+                	<option value="SC">South Carolina</option>
+                	<option value="SD">South Dakota</option>
+                	<option value="TN">Tennessee</option>
+                	<option value="TX">Texas</option>
+                	<option value="UT">Utah</option>
+                	<option value="VT">Vermont</option>
+                	<option value="VA">Virginia</option>
+                	<option value="WA">Washington</option>
+                	<option value="WV">West Virginia</option>
+                	<option value="WI">Wisconsin</option>
+                	<option value="WY">Wyoming</option>
+                </optgroup>
                 <optgroup label="Territories">
                   <option value="AS">American Samoa</option>
                   <option value="GU">Guam</option>
@@ -119,23 +121,46 @@
 
               </select>
 
-              <label for="zip">Zip Code</label>
+              <label for="zip" class="basic-label">Zip Code</label>
               <input class="zip" type="text" id="zip" name="user-zip" value="">
 
           </fieldset>
+          <div class="thin"></div>
+          <!-- These lines may end up being borders instead? -->
+          <!-- thik could be bottom of intro / thin could be top of field set? -->
           <fieldset>
               <legend>Newsletter</legend>
 
+              <p><label class="basic-label">Select the newsletters you would like to receive</label><br>
+              <input type="checkbox" id="html-news" name="user-newsletters" checked>
+              <label for="html-news" class="basic-label">HTML News</label><br>
+
+              <input type="checkbox" id="css-news" name="user-newsletters">
+              <label for="css-news" class="basic-label">CSS News</label><br>
+
+              <input type="checkbox" id="javascript-news" name="user-newsletters">
+              <label for="javascript-news" class="basic-label">Javascript News</label><br></p>
+
+              <p><label class="basic-label">Newsletter format</label><br>
+              <input type="radio" id="html-format" name="user-format" checked>
+              <label for="html-format" class="basic-label">HTML</label><br>
+
+              <input type="radio" id="text-format" name="user-format">
+              <label for="text-format" class="basic-label">Plain text</label><br></p>
+
+              <p><label for="other-topics" class="basic-label">Other topics you'd like to hear about</label><br>
+            <textarea name="other-topics" rows="4"></textarea></p>
+
+            <input type="submit" value="Sign Up">
 
           </fieldset>
-          <input type="submit" value="Sign Up">
         </form>
 
       </div>
     </main>
     <footer>
       <div class="container">
-
+        <p>Copyright 2021 The Code Review</p>
       </div>
     </footer>
   </body>
