--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
               <legend>Contact Information</legend>
 
               <label for="name" class="basic-label">Full Name</label>
-              <input type="text" id="name" name="user-name" required>
+              <input type="text" id="name" name="user-name" placeholder="Required" required>
 
               <label for="email" class="basic-label">Email Address</label>
-              <input type="email" id="email" name="user-email" required>
+              <input type="email" id="email" name="user-email"  placeholder="Required" required>
 
               <label for="phone" class="basic-label">Phone Number</label>
               <input type="tel" id="phone" name="user-phone" value="">
