trying the menu again

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <label for="state" class="basic-label">State</label>
               <select id="state" name="user-state">
                 <optgroup label="Choose State">
-                  <option value="" hidden>Choose State</option>
+                  <option value="" disabled>Choose State</option>
                   <option value="AL">Alabama</option>
                 	<option value="AK">Alaska</option>
                 	<option value="AZ">Arizona</option>
