adding elements for extra credit

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
               <input type="email" id="email" name="user-email"  placeholder="Required" required>
 
               <label for="phone" class="basic-label">Phone Number</label>
-              <input type="tel" id="phone" name="user-phone" value="">
+              <input type="tel" id="phone" name="user-phone" placeholder="(312) 867-5309">
 
               <label for="address" class="basic-label">Street Address</label>
-              <input type="text" id="address" name="user-address" value="">
+              <input type="text" id="address" name="user-address" placeholder="1600 Pennsylvania Avenue">
 
               <label for="city" class="basic-label">City</label>
-              <input type="text" id="city" name="user-city" value="">
+              <input type="text" id="city" name="user-city" placeholder="San Juan">
 
               <!-- state -->
               <label for="state" class="basic-label">State</label>
@@ -123,7 +123,7 @@
               </select>
 
               <label for="zip" class="basic-label">Zip Code</label>
-              <input class="zip" type="text" id="zip" name="user-zip" value="">
+              <input class="zip" type="text" id="zip" name="user-zip" placeholder="90210">
 
           </fieldset>
           <div class="thin"></div>
@@ -150,7 +150,7 @@
               <label for="text-format" class="basic-label">Plain text</label><br></p>
 
               <p><label for="other-topics" class="basic-label">Other topics you'd like to hear about</label><br>
-            <textarea name="other-topics" rows="4"></textarea></p>
+            <textarea name="other-topics" rows="4" placeholder="Virtual Reality? Quantum Mechanics? Award winning Chili recipes...? Let us know!"></textarea></p>
 
             <input type="submit" value="Sign Up">
 
