--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <label for="text-format" class="basic-label">Plain text</label><br></p>
 
               <p><label for="other-topics" class="basic-label">Other topics you'd like to hear about</label><br>
-            <textarea name="other-topics" rows="4" placeholder="Virtual Reality? Quantum Mechanics? Award winning Chili recipes...? Let us know!"></textarea></p>
+            <textarea id="other-topics" name="user-topics" rows="4" placeholder="Virtual Reality? Quantum Mechanics? Award winning Chili recipes...? Let us know!"></textarea></p>
 
             <input type="submit" value="Sign Up">
 
